Fix edit switch alignment
CSS ought to rename vertical-align to bash-your-head-into-a-wall

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -40,3 +40,11 @@
     line-height: 20px;
     vertical-align: middle;
 }
+
+.edit_switch {
+    vertical-align: middle;
+}
+
+.edit_text {
+    vertical-align: middle;
+}
